--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ dj-database-url==0.5.0
 Django==4.0.5
 django-bootstrap4==22.1
 django-heroku==0.3.1
-django-registration==3.3
+django_registration_redux-2.10
 django-tinymce==3.4.0
 gunicorn==20.1.0
 Pillow==9.1.1
